@@ -20,6 +20,116 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|text
+operator|.
+name|DateFormat
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayDeque
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Date
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Deque
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashSet
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -192,28 +302,8 @@ name|DefaultHandler
 import|;
 end_import
 
-begin_import
-import|import
-name|java
-operator|.
-name|text
-operator|.
-name|DateFormat
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|*
-import|;
-end_import
-
 begin_comment
-comment|/**  * The class responsible for handling Tika events and translating them into {@link org.apache.solr.common.SolrInputDocument}s.  *<B>This class is not thread-safe.</B>  *<p>  * User's may wish to override this class to provide their own functionality.  *  * @see org.apache.solr.handler.extraction.SolrContentHandlerFactory  * @see org.apache.solr.handler.extraction.ExtractingRequestHandler  * @see org.apache.solr.handler.extraction.ExtractingDocumentLoader  */
+comment|/**  * The class responsible for handling Tika events and translating them into {@link org.apache.solr.common.SolrInputDocument}s.  *<B>This class is not thread-safe.</B>  *<p>  * This class cannot be reused, you have to create a new instance per document!  *<p>  * User's may wish to override this class to provide their own functionality.  *  * @see org.apache.solr.handler.extraction.SolrContentHandlerFactory  * @see org.apache.solr.handler.extraction.ExtractingRequestHandler  * @see org.apache.solr.handler.extraction.ExtractingDocumentLoader  */
 end_comment
 
 begin_class
@@ -230,6 +320,7 @@ DECL|field|log
 specifier|private
 specifier|transient
 specifier|static
+specifier|final
 name|Logger
 name|log
 init|=
@@ -242,35 +333,45 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
+DECL|field|contentFieldName
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|contentFieldName
+init|=
+literal|"content"
+decl_stmt|;
 DECL|field|document
 specifier|protected
+specifier|final
 name|SolrInputDocument
 name|document
 decl_stmt|;
 DECL|field|dateFormats
 specifier|protected
+specifier|final
 name|Collection
 argument_list|<
 name|String
 argument_list|>
 name|dateFormats
-init|=
-name|DateUtil
-operator|.
-name|DEFAULT_DATE_FORMATS
 decl_stmt|;
 DECL|field|metadata
 specifier|protected
+specifier|final
 name|Metadata
 name|metadata
 decl_stmt|;
 DECL|field|params
 specifier|protected
+specifier|final
 name|SolrParams
 name|params
 decl_stmt|;
 DECL|field|catchAllBuilder
 specifier|protected
+specifier|final
 name|StringBuilder
 name|catchAllBuilder
 init|=
@@ -282,11 +383,13 @@ argument_list|)
 decl_stmt|;
 DECL|field|schema
 specifier|protected
+specifier|final
 name|IndexSchema
 name|schema
 decl_stmt|;
 DECL|field|fieldBuilders
 specifier|protected
+specifier|final
 name|Map
 argument_list|<
 name|String
@@ -294,58 +397,48 @@ argument_list|,
 name|StringBuilder
 argument_list|>
 name|fieldBuilders
-init|=
-name|Collections
-operator|.
-name|emptyMap
-argument_list|()
 decl_stmt|;
 DECL|field|bldrStack
 specifier|private
-name|LinkedList
+specifier|final
+name|Deque
 argument_list|<
 name|StringBuilder
 argument_list|>
 name|bldrStack
 init|=
 operator|new
-name|LinkedList
+name|ArrayDeque
 argument_list|<>
 argument_list|()
 decl_stmt|;
 DECL|field|captureAttribs
 specifier|protected
+specifier|final
 name|boolean
 name|captureAttribs
 decl_stmt|;
 DECL|field|lowerNames
 specifier|protected
+specifier|final
 name|boolean
 name|lowerNames
 decl_stmt|;
-DECL|field|contentFieldName
-specifier|protected
-name|String
-name|contentFieldName
-init|=
-literal|"content"
-decl_stmt|;
 DECL|field|unknownFieldPrefix
 specifier|protected
+specifier|final
 name|String
 name|unknownFieldPrefix
-init|=
-literal|""
 decl_stmt|;
 DECL|field|defaultField
 specifier|protected
+specifier|final
 name|String
 name|defaultField
-init|=
-literal|""
 decl_stmt|;
 DECL|field|literalsOverride
 specifier|private
+specifier|final
 name|boolean
 name|literalsOverride
 decl_stmt|;
@@ -356,6 +449,8 @@ argument_list|<
 name|String
 argument_list|>
 name|literalFieldNames
+init|=
+literal|null
 decl_stmt|;
 DECL|method|SolrContentHandler
 specifier|public
@@ -405,6 +500,8 @@ argument_list|>
 name|dateFormats
 parameter_list|)
 block|{
+name|this
+operator|.
 name|document
 operator|=
 operator|new
@@ -563,6 +660,16 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+else|else
+block|{
+name|fieldBuilders
+operator|=
+name|Collections
+operator|.
+name|emptyMap
+argument_list|()
+expr_stmt|;
 block|}
 name|bldrStack
 operator|.
@@ -1252,60 +1359,6 @@ block|}
 block|}
 comment|// no value set - throw exception for debugging
 comment|// if (vals==null&& fval==null) throw new RuntimeException(name + " has no non-null value ");
-block|}
-annotation|@
-name|Override
-DECL|method|startDocument
-specifier|public
-name|void
-name|startDocument
-parameter_list|()
-throws|throws
-name|SAXException
-block|{
-name|document
-operator|.
-name|clear
-argument_list|()
-expr_stmt|;
-name|catchAllBuilder
-operator|.
-name|setLength
-argument_list|(
-literal|0
-argument_list|)
-expr_stmt|;
-for|for
-control|(
-name|StringBuilder
-name|builder
-range|:
-name|fieldBuilders
-operator|.
-name|values
-argument_list|()
-control|)
-block|{
-name|builder
-operator|.
-name|setLength
-argument_list|(
-literal|0
-argument_list|)
-expr_stmt|;
-block|}
-name|bldrStack
-operator|.
-name|clear
-argument_list|()
-expr_stmt|;
-name|bldrStack
-operator|.
-name|add
-argument_list|(
-name|catchAllBuilder
-argument_list|)
-expr_stmt|;
 block|}
 annotation|@
 name|Override
